feat: add configurações do docker

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -9,7 +9,9 @@ RUN apt-get update && apt-get install -y \
     libonig-dev \
     libxml2-dev \
     zip \
-    curl
+    curl \
+    && curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
+    && apt-get install -y nodejs
 
 # Extensões PHP necessárias para Laravel
 RUN docker-php-ext-install \
